@@ -74,7 +74,7 @@ _systemctl () {
                [STANDALONE]='--all -a --reverse --after --before --defaults --fail --ignore-dependencies --failed --force -f --full -l --global
                              --help -h --no-ask-password --no-block --no-legend --no-pager --no-reload --no-wall
                              --quiet -q --privileged -P --system --user --version --runtime --recursive -r'
-                      [ARG]='--host -H --kill-who --property -p --signal -s --type -t --state --root'
+                      [ARG]='--kill-who --property -p --signal -s --type -t --state --root'
         )
 
         if __contains_word "--user" ${COMP_WORDS[*]}; then
@@ -102,9 +102,6 @@ _systemctl () {
                         --root)
                                 comps=$(compgen -A directory -- "$cur" )
                                 compopt -o filenames
-                        ;;
-                        --host|-H)
-                                comps=$(compgen -A hostname)
                         ;;
                         --property|-p)
                                 comps=$(__systemd_properties $mode)
